--- a/css/responsif.css
+++ b/css/responsif.css
@@ -22,7 +22,7 @@
     cursor: pointer;
     top: 4.2%;
     transform: translateY(-50%);
-    padding-bottom: .5rem;
+    padding-bottom: 1rem;
 }
 
 .burger div{
