--- a/css/miring.css
+++ b/css/miring.css
@@ -35,7 +35,7 @@
     }
 
     .judul-isi1 h2{
-        text-align: center;
+        text-align: left;
         color: rgba(0, 0, 0, 0.753);
         font-size: 15px;
     }
