--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ span{
 }
 
 nav {
-    background-color: rgba(15, 15, 58, 0.815);
+    background-color: #0e4e92bd;
     color: #fff;
     display: flex;
     justify-content: space-between;
@@ -190,14 +190,12 @@ header {
 .judul-perjalanan{
     text-transform: uppercase;
     text-align: left;
-    text-decoration: underline;
-    text-decoration-thickness:1px ;
-    text-underline-offset: 6px;
     color: rgb(0, 0, 0);
 }
 
 .judul-perjalanan h1{
-    font-weight: 500;
+    font-size: 14px;
+    font-weight: 600;
     color: rgba(0, 0, 0, 0.753);
 }
 
@@ -253,6 +251,30 @@ details {
     max-height: 100px; /* Sesuaikan dengan tinggi konten */
     opacity: 1;
   }
+
+/* alumni */
+
+#alumni{
+    /* position: relative; */
+    overflow: hidden;
+}
+
+.konten-semua{
+    margin-top: 5.5rem;
+    text-align: center;
+    font-size: 2rem;
+    letter-spacing: .3rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    position: relative;
+    z-index: 2;
+}
+
+.judul-konten h1{
+    font-weight: 500;
+    font-size: 20px;
+    color: rgba(0, 0, 0, 0.74);
+}
 
 /* footer */
 footer{
