--- a/css/responsif.css
+++ b/css/responsif.css
@@ -139,6 +139,68 @@ nav ul li a{
         text-align: justify;
     }
 
+    .galer{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 0vh;
+        max-width: 30vh;
+        margin: 1rem .3rem;
+        background-color: rgb(163, 163, 163);
+    }
+    
+    .galeri-img{
+        width: 80px;
+        aspect-ratio: 3/4;
+        overflow: hidden;
+        position: relative;
+        max-width: 100%;
+        display: block;
+    }
+    
+    .galeri-img:hover img{
+        transform: scale(1.2);
+    }
+    
+    .galeri-img .kata{
+        position: absolute;
+        z-index: 1;
+        background-color:rgba(0, 0, 0, 0.432);
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: .3s all ease-in-out;
+    }
+    
+    .galeri-img:hover .kata{
+        opacity: 0;
+    }
+    
+    .galeri-img .kata p{
+        font-size: .5rem;
+        color: white;
+        letter-spacing: .1rem;
+    }
+    .galeri-img img{    
+        width: 100%;
+        aspect-ratio: 3/4;
+        transition: .5s ease-in-out;
+        object-fit: cover;
+    
+    }
+    
+    .foto{
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+        align-items: center;
+        justify-content: center;
+        border-radius: 2px;
+        height: auto;
+        padding: 2rem 2rem;
+    }
+
 
     /* footer */
     footer{
