--- a/css/responsif.css
+++ b/css/responsif.css
@@ -212,6 +212,7 @@ nav ul li a{
     footer h1{
         text-align: center;
         font-size: .7rem;
+        margin-left: 20px;
     }
 
     footer p{
