--- a/css/responsif.css
+++ b/css/responsif.css
@@ -139,66 +139,82 @@ nav ul li a{
         text-align: justify;
     }
 
-    .galer{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        min-height: 0vh;
-        max-width: 30vh;
-        margin: 1rem .3rem;
-        background-color: rgb(163, 163, 163);
-    }
-    
-    .galeri-img{
-        width: 80px;
-        aspect-ratio: 3/4;
-        overflow: hidden;
+    .konten-semua{
+        margin-top: 5.5rem;
+        text-align: center;
+        font-size: 2rem;
+        letter-spacing: .3rem;
+        text-transform: uppercase;
+        font-weight: 500;
         position: relative;
-        max-width: 100%;
-        display: block;
+        z-index: 2;
     }
     
-    .galeri-img:hover img{
-        transform: scale(1.2);
+    .judul-konten h1, h2{
+        padding: 0 .2rem;
+        font-weight: 600;
+        font-size: 25px;
+        color: rgba(0, 0, 0, 0.74);
     }
     
-    .galeri-img .kata{
-        position: absolute;
-        z-index: 1;
-        background-color:rgba(0, 0, 0, 0.432);
-        width: 100%;
+    .gambar{
+        margin-top: 1rem;
+        padding: 0 1rem;
+    }
+    .gambar img{
+        filter: grayscale(20%);
         height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: .3s all ease-in-out;
-    }
-    
-    .galeri-img:hover .kata{
-        opacity: 0;
-    }
-    
-    .galeri-img .kata p{
-        font-size: .5rem;
-        color: white;
-        letter-spacing: .1rem;
-    }
-    .galeri-img img{    
         width: 100%;
-        aspect-ratio: 3/4;
-        transition: .5s ease-in-out;
-        object-fit: cover;
-    
+        border-radius: 2px;
+        box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.15);
     }
     
-    .foto{
-        display: grid;
-        grid-template-columns: auto auto auto auto;
-        align-items: center;
-        justify-content: center;
-        border-radius: 2px;
-        height: auto;
+    .nama {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        padding: 0 1rem;
+        max-width: 375px;
+        margin-top: 0;
+      }
+      
+      .nama-kiri, .nama-kanan, .nama-tengah {
+        width: 45%; /* Supaya tidak terlalu melebar */
+      }
+      
+      .ul {
+        list-style-type: none; /* Menghilangkan default bullet */
+        padding-left: 0;
+        
+      }
+      
+      .li {
+        position: relative;
+        padding-left: 15px;
+        font-size: 7px;
+      }
+      
+      .li::before {
+        content: "-";
+        position: absolute;
+        left: 0;
+      }
+    
+      .wali{
         padding: 2rem 2rem;
+      }
+    .wali h3{
+        padding-left: 1rem;
+        font-size: 7px;
+        color: black;
+        text-align: center;
+    }
+    
+    .wali p {
+        padding-left: 1rem;
+        font-size: 7px;
+        color: black;
+        text-align: center;
     }
 
 
