--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,6 @@ details {
     /* position: relative; */
     overflow: hidden;
     background-color: rgb(226, 197, 133);
-    height: 100vh;
 }
 
 .konten-semua{
@@ -285,18 +284,19 @@ details {
 }
 .gambar img{
     filter: grayscale(20%);
-    height: 100%;
-    width: 100%;
+    height: 90%;
+    width: 90%;
     border-radius: 2px;
     box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.15);
 }
 
 .nama {
+    margin-top: 2rem;
     display: flex;
     justify-content: space-between;
-    width: 100%;
     padding: 0 1rem;
-    max-width: 375px;
+    width: 100%;
+    padding-left: 5rem;
   }
   
   .nama-kiri, .nama-kanan, .nama-tengah {
@@ -312,7 +312,7 @@ details {
   .li {
     position: relative;
     padding-left: 15px;
-    font-size: 7px;
+    font-size:20px;
   }
   
   .li::before {
@@ -322,13 +322,22 @@ details {
   }
 
   .wali{
-    margin-top: 1rem;
+    padding: 4rem 2rem;
   }
-.wali h3, p{
+.wali h3{
     padding-left: 1rem;
     font-size: 7px;
     color: black;
     text-align: center;
+    font-size: 20px;
+}
+
+.wali p {
+    padding-left: 1rem;
+    font-size: 7px;
+    color: black;
+    text-align: center;
+    font-size: 20px;
 }
 
 /* footer */
