--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,7 @@ header {
     color: rgba(0, 0, 0, 0.753);
     font-size: 13px;
     text-align: justify;
+    font-weight: 300;
 }
 
 /* perjalanan */
