--- a/css/style.css
+++ b/css/style.css
@@ -341,6 +341,151 @@ details {
     font-size: 20px;
 }
 
+.quote{
+    font-size: 15px;
+    text-align: center;
+    padding: 0 6rem;
+    margin-bottom: 2rem;
+    font-style: italic;
+    font-weight: 250;
+}
+
+/* galeri */
+#galeri{
+    /* position: relative; */
+    overflow: hidden;
+    background-color: rgb(201, 201, 201);
+}
+
+.galer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 40vh;
+    max-width: 30vh;
+    /* background-color: rgb(163, 163, 163); */
+}
+
+.galeri-img{
+    width: 200px;
+    aspect-ratio: 3/4;
+    overflow: hidden;
+    position: relative;
+    max-width: 100%;
+    display: block;
+}
+
+.galeri-img:hover img{
+    transform: scale(1.2);
+}
+
+.galeri-img .kata{
+    position: absolute;
+    z-index: 1;
+    background-color:rgba(0, 0, 0, 0.432);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: .3s all ease-in-out;
+}
+
+.galeri-img:hover .kata{
+    opacity: 0;
+}
+
+.galeri-img .kata p{
+    font-size: 1rem;
+    color: white;
+}
+.galeri-img img{    
+    width: 100%;
+    aspect-ratio: 3/4;
+    transition: .5s ease-in-out;
+    object-fit: cover;
+}
+
+.foto{
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto;
+    align-items: center;
+    justify-content: center;
+    border-radius: 2px;
+    height: auto;
+    margin-top: 1rem;
+}
+
+/* kontak */
+#kontak{
+    /* position: relative; */
+    overflow: hidden;
+    background-color: rgb(255, 255, 255);
+}
+
+.kontak{
+    margin-top: 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    gap: 3rem;
+}
+
+.kontak-form div{
+    margin-bottom: 1.4rem;
+}
+
+/* .kontak-left{
+    width: 90%;
+    margin-left: 2.5rem;
+} */
+
+.kontak-form input, .kontak-form textarea{
+    width: 90%;
+    padding: .75rem 1.4rem;
+    font-family: "Poppins", sans-serif;
+    background-color: rgba(182, 182, 182, 0.158);
+    border: 1px solid rgba(160, 160, 160, 0.192);
+    border-radius: 3px;
+    resize: none;
+}
+
+.kontak-left{
+    margin-left: 4rem;
+}
+
+.kontak-form input::placeholder, .kontak-form textarea::placeholder{
+    color: rgb(170, 170, 170);
+}
+
+.kontak-form input:focus, .kontak-form textarea:focus{
+    outline: none;
+    border: 1px solid rgb(107, 107, 107);
+}
+
+.btn-submit{
+    width: 1105px;
+    padding: .75rem 1.4rem;
+    background-color: #0e4e92bd;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: .3s ease-in-out;
+    font-family: "Poppins", sans-serif;
+}
+
+.btn-submit:hover{
+    background-color: #0a2644bd;
+}
+
+/* lainnya */
+#lainnya{
+    /* position: relative; */
+    overflow: hidden;
+    background-color: rgb(255, 255, 255);
+}
+
+
 /* footer */
 footer{
 background-color: rgba(128, 128, 128, 0.219);
